# seleniumOpenpyxl

./: 01.python_basic.ipynb  01.review.ipynb  02.python_go.ipynb  02.python_selenium.ipynb  02.python_selenium_0.ipynb  02.python_selenium_00.ipynb  03.python_excel.ipynb  03.python_excel_0.ipynb  03.python_excel_00.ipynb  04.python_practice.ipynb  1.삼성전자.xlsx  2023-06-22.xlsx  README.md  shortcutTest.html  test.xlsx  test_0.ipynb  test_final.xlsx  yes24 책 크롤링.csv  zoom.xlsx  zoom_0.xlsx  구글 뉴스 크롤링.csv  네이버 경제 뉴스 크롤링.csv  양식_삼성전자.xlsx  양식_청구서 copy.xlsx  청구서_삼성전자.xlsx
oz-backend-django/: db.sqlite3  pyproject.toml
oz-backend-django/boards/: admin.py  models.py  serializers.py  urls.py  views.py
oz-backend-django/boards/migrations/: 0001_initial.py  0002_board_created_board_updated.py  0002_initial.py  0003_board_user.py
oz-backend-django/boards/templates/: all_boards.html
oz-backend-django/chattings/migrations/: 0001_initial.py
oz-backend-django/common/: models.py
oz-backend-django/config/: settings.py  urls.py
oz-backend-django/reviews/: admin.py  models.py  urls.py  views.py
oz-backend-django/reviews/migrations/: 0001_initial.py  0002_initial.py
oz-backend-django/users/: admin.py  models.py  serializers.py  views.py
oz-backend-django/users/migrations/: 0001_initial.py  0002_alter_user_age_alter_user_first_name_and_more.py
