[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Your Name <anotherhell48@gmail.com>"]
readme = "README.md"
packages = [{include = "class_backend_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
